deployments/autoscaling/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: autoscaling
  labels:
    app: autoscaling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: autoscaling
  template:
    metadata:
      labels:
        app: autoscaling
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '3333'
    spec:
      containers:
        - image: autoscaling:latest
          imagePullPolicy: IfNotPresent
          name: autoscaling
          ports:
            - name: http
              containerPort: 3333
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
