deployments/autoscaling/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: autoscaling
spec:
  ingressClassName: nginx
  rules:
    - host: autoscaling.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: autoscaling
                port:
                  number: 80
